syntax = "proto3";

package cosmoslottery.lottery;

import "gogoproto/gogo.proto";
import "cosmoslottery/lottery/params.proto";
import "cosmoslottery/lottery/active_lottery.proto";
import "cosmoslottery/lottery/lottery.proto";

option go_package = "cosmos-lottery/x/lottery/types";

// GenesisState defines the lottery module's genesis state.
message GenesisState {
           Params        params        = 1 [(gogoproto.nullable) = false];
           ActiveLottery activeLottery = 2 [(gogoproto.nullable) = false];
  repeated Lottery       lotteryList   = 3 [(gogoproto.nullable) = false];
}

